# rust-raytracer

./: .vscode  Cargo.toml  README.md
.github/workflows/: build.yml
raytracer-engine/: Cargo.toml
raytracer-engine/src/: camera.rs  color.rs  engine.rs  geometry.rs  intersectable.rs  kdtree.rs  lib.rs  light.rs  material.rs  parser.rs  renderer.rs  sample.rs  texture.rs
res/: spheres_with_plane.json  suzanne.json
sdl2-raytracer/: Cargo.toml
sdl2-raytracer/src/: main.rs
src/: camera.rs  color.rs  engine.rs  geometry.rs  intersectable.rs  light.rs  main.rs  material.rs  parser.rs  renderer.rs  texture.rs
terminal-raytracer/: Cargo.toml
terminal-raytracer/src/: main.rs
wasm-raytracer/: Cargo.toml  LICENSE_MIT
wasm-raytracer/src/: lib.rs  utils.rs
wasm-raytracer/www/: index.html  index.js  package-lock.json  package.json
