[package]
name = "rust-raytracer"
version = "0.1.0"
authors = ["Guillaume ERB <guillaume.erb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
ferris-says = "0.1"
image = "0.22.3"
sdl2 = "0.32.2"
rayon = "1.3.0"