[package]
name = "raytracer_engine"
version = "0.1.0"
authors = ["Guillaume ERB <guillaume.erb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "raytracer_engine"

[dependencies]
ferris-says = "0.1"
image = "0.22.4"
rayon = "1.3.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"