[package]
name = "terminal_raytracer"
version = "0.1.0"
authors = ["Guillaume ERB <guillaume.erb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raytracer_engine = { path = "../raytracer-engine" }
ansi_term = "0.12"